[package]
description = "Ethcore stratum lib"
name = "ethcore-stratum"
version = "1.4.0"
license = "GPL-3.0"
authors = ["Ethcore <admin@ethcore.io>"]
build = "build.rs"

[build-dependencies]
ethcore-ipc-codegen = { path = "../ipc/codegen" }

[dependencies]
log = "0.3"
# json-tcp-server = { git = "https://github.com/ethcore/json-tcp-server" }
# jsonrpc-core = "3.0"
json-tcp-server = { path = "/share/workspace/json-tcp-server" }
jsonrpc-core = { path = "/share/workspace/jsonrpc-core" }
mio = { git = "https://github.com/ethcore/mio", branch = "v0.5.x" }
ethcore-util = { path = "../util" }
ethcore-devtools = { path = "../devtools" }
lazy_static = "0.2"
env_logger = "0.3"
ethcore-ipc = { path = "../ipc/rpc" }
semver = "0.2"
ethcore-ipc-nano = { path = "../ipc/nano" }

[profile.release]
debug = true
lto = false
